tests/mapped_type_utilities/mapped_type_utilities.exp
Error ----------------------------------------------------------------------------------- imported_omit_inference.js:3:1

Cannot call `action` because `Omit` [1] is not a polymorphic type. [incompatible-use]

   imported_omit_inference.js:3:1
      3| action(
         ^^^^^^

References:
   <BUILTINS>/core.js:3187:36
   3187| type Omit<O: interface {}, Keys> = $Omit<O, Keys>;
                                            ^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------- namespace_omit_inference.js:3:23

Cannot call `actionNamespace.tools.action` because `Omit` [1] is not a polymorphic type. [incompatible-use]

   namespace_omit_inference.js:3:23
      3| actionNamespace.tools.action(
                               ^^^^^^

References:
   <BUILTINS>/core.js:3187:36
   3187| type Omit<O: interface {}, Keys> = $Omit<O, Keys>;
                                            ^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ omit.js:7:7

Cannot get `noFoo.foo` because property `foo` is missing in `Omit` [1]. [prop-missing]

   omit.js:7:7
   7| noFoo.foo; // ERROR
            ^^^

References:
   omit.js:6:22
   6| declare const noFoo: OmitFoo;
                           ^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- omit.js:12:12

Cannot get `noFooOrBar.foo` because property `foo` is missing in `Omit` [1]. [prop-missing]

   omit.js:12:12
   12| noFooOrBar.foo; // ERROR
                  ^^^

References:
   omit.js:11:27
   11| declare const noFooOrBar: OmitFooAndBar;
                                 ^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- omit.js:13:12

Cannot get `noFooOrBar.bar` because property `bar` (did you mean `baz`?) is missing in `Omit` [1]. [prop-missing]

   omit.js:13:12
   13| noFooOrBar.bar; // ERROR
                  ^^^

References:
   omit.js:11:27
   11| declare const noFooOrBar: OmitFooAndBar;
                                 ^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- omit.js:30:9

Cannot get `noFoo.foo` because property `foo` is missing in `Omit` [1]. [prop-missing]

   omit.js:30:9
   30|   noFoo.foo; // ERROR: omitted
               ^^^

References:
   omit.js:28:24
   28|   declare const noFoo: OmitInterface;
                              ^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- omit.js:31:3

Cannot cast `noFoo` to object type because `Omit` [1] is not a subtype of object type [2]. Class instances are not
subtypes of object types; consider rewriting object type [2] as an interface. [class-object-subtyping]

   omit.js:31:3
   31|   noFoo as {bar: number; baz: number, ...}; // ERROR: interface not object
         ^^^^^

References:
   omit.js:28:24
   28|   declare const noFoo: OmitInterface;
                              ^^^^^^^^^^^^^ [1]
   omit.js:31:12
   31|   noFoo as {bar: number; baz: number, ...}; // ERROR: interface not object
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- omit.js:46:9

Cannot get `noFoo.foo` because property `foo` is missing in `Omit` [1]. [prop-missing]

   omit.js:46:9
   46|   noFoo.foo; // ERROR: omitted
               ^^^

References:
   omit.js:44:24
   44|   declare const noFoo: OmitInstance;
                              ^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- omit.js:47:3

Cannot cast `noFoo` to object type because `Omit` [1] is not a subtype of object type [2]. Class instances are not
subtypes of object types; consider rewriting object type [2] as an interface. [class-object-subtyping]

   omit.js:47:3
   47|   noFoo as {bar: number; baz: number, ...}; // ERROR: interface not object
         ^^^^^

References:
   omit.js:44:24
   44|   declare const noFoo: OmitInstance;
                              ^^^^^^^^^^^^ [1]
   omit.js:47:12
   47|   noFoo as {bar: number; baz: number, ...}; // ERROR: interface not object
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- omit.js:54:3

Cannot cast `x` to object type because property `foo` is read-only in `Omit` [1] but writable in object type [2].
[incompatible-variance]

   omit.js:54:3
   54|   x as {foo: 1}; // ERROR
         ^

References:
   omit.js:52:20
   52|   declare const x: Omit<{+foo: 1, bar: 2}, 'bar'>;
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   omit.js:54:8
   54|   x as {foo: 1}; // ERROR
              ^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------- omit_alias_return_fn.js:11:8

Cannot spread object literal because Flow cannot determine a type for object literal [1]. `Omit` [2] cannot be spread
because interfaces do not track the own-ness of their properties. Try using an object type instead.
[cannot-spread-interface]

   omit_alias_return_fn.js:11:8
              v
   11|       ({
   12|         ...defaults,
   13|         ...args,
   14|       } as any), // ERROR
             ^ [1]

References:
   omit_alias_return_fn.js:8:5
    8| ): (Omit<TArgs, keyof TDefaults>) => TResult {
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------- omit_alias_return_fn.js:19:3

Cannot call `mergeWithDefaults` because in type argument `TDefaults`: property `b` is missing in object literal [1] but
exists in object type [2]. [incompatible-type]

This optional property of object type [2] is invariantly typed. To fix,
- Either annotate object literal [1] with `{a?: number, b?: string}` [2]
- Or make object type [2] readonly. See
https://flow.org/en/docs/faq/#why-cant-i-pass-a-string-to-a-function-that-takes-a-string-number.

   omit_alias_return_fn.js:19:3
   19|   {a: 1}, // ERROR
         ^^^^^^ [1]

References:
   omit_alias_return_fn.js:20:12
   20|   ({a, b}: {a: number, b: string}) => b,
                  ^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------- omit_alias_return_fn.js:19:7

Cannot call `mergeWithDefaults` because in type argument `TDefaults` > property `a`: `number` [1] is not exactly the
same as `void | number` [2]. [incompatible-type]

The above-mentioned two types must be the same because property `a` is invariantly typed. To fix the error,
- Either annotate object literal [3] with `{a?: number, b?: string}` [4]
- Or make property `a` in object type [4] readonly. See
https://flow.org/en/docs/faq/#why-cant-i-pass-a-string-to-a-function-that-takes-a-string-number.

   omit_alias_return_fn.js:19:7
   19|   {a: 1}, // ERROR
             ^ [1]

References:
   omit_alias_return_fn.js:20:16
   20|   ({a, b}: {a: number, b: string}) => b,
                      ^^^^^^ [2]
   omit_alias_return_fn.js:19:3
   19|   {a: 1}, // ERROR
         ^^^^^^ [3]
   omit_alias_return_fn.js:20:12
   20|   ({a, b}: {a: number, b: string}) => b,
                  ^^^^^^^^^^^^^^^^^^^^^^ [4]


Error -------------------------------------------------------------------------------------------- omit_inference.js:5:1

Cannot call `projectWithoutA` because in type argument `T` > property `a`: `Omit` [1] is not exactly the same as
`number` [2]. [incompatible-type]

The above-mentioned two types must be the same because property `a` is invariantly typed. To fix the error,
- Either make `Omit` [1] and `{a: number, b: string}` [3] exactly the same
- Or make property `a` in object type [3] readonly. See
https://flow.org/en/docs/faq/#why-cant-i-pass-a-string-to-a-function-that-takes-a-string-number.

   omit_inference.js:5:1
      5| projectWithoutA() as {b: string}; // ERROR
         ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:3187:36
   3187| type Omit<O: interface {}, Keys> = $Omit<O, Keys>;
                                            ^^^^^^^^^^^^^^ [1]
   omit_inference.js:1:33
      1| function projectWithoutA<T: {a: number, b: string}>(): Omit<T, 'a'> {
                                         ^^^^^^ [2]
   omit_inference.js:1:29
      1| function projectWithoutA<T: {a: number, b: string}>(): Omit<T, 'a'> {
                                     ^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------- omit_inference.js:18:1

Cannot call `actionWithDefaults` because `Omit` [1] is not a polymorphic type. [incompatible-use]

   omit_inference.js:18:1
     18| actionWithDefaults(
         ^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:3187:36
   3187| type Omit<O: interface {}, Keys> = $Omit<O, Keys>;
                                            ^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- pick.js:8:10

Cannot assign `3` to `pickedO1.foo` because property `foo` is not writable. [cannot-write]

   8| pickedO1.foo = 3; // ERROR: foo is read-only
               ^^^


Error ------------------------------------------------------------------------------------------------------ pick.js:9:1

Cannot cast `pickedO1.bar` to string because undefined [1] is incompatible with string [2]. [incompatible-type]

   pick.js:9:1
      9| pickedO1.bar as string; // ERROR bar is optional
         ^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:3182:62
   3182| type Pick<O: interface {}, Keys: $Keys<O>> = {[key in Keys]: O[key]};
                                                                      ^^^^^^ [1]
   pick.js:9:17
      9| pickedO1.bar as string; // ERROR bar is optional
                         ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ pick.js:9:1

Cannot cast `pickedO1.bar` to string because undefined [1] is incompatible with string [2]. [incompatible-type]

   pick.js:9:1
   9| pickedO1.bar as string; // ERROR bar is optional
      ^^^^^^^^^^^^

References:
   pick.js:1:32
   1| type O1 = {+foo: number, bar?: string};
                                     ^^^^^^ [1]
   pick.js:9:17
   9| pickedO1.bar as string; // ERROR bar is optional
                      ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- pick.js:24:10

Cannot get `picked.bar` because property `bar` is missing in `Pick` [1]. [prop-missing]

   pick.js:24:10
   24|   picked.bar; // ERROR: wasn't picked
                ^^^

References:
   pick.js:22:25
   22|   declare const picked: PickInterface;
                               ^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- pick.js:36:10

Cannot get `picked.bar` because property `bar` is missing in `Pick` [1]. [prop-missing]

   pick.js:36:10
   36|   picked.bar; // ERROR: wasn't picked
                ^^^

References:
   pick.js:34:25
   34|   declare const picked: PickInstance;
                               ^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- record.js:5:1

Cannot cast `exact` to object type because property `bar` is extra in `Record` [1] but missing in object type [2]. Exact
objects do not accept extra props. [incompatible-type]

   record.js:5:1
   5| exact as {foo: number}; // ERROR, mising bar
      ^^^^^

References:
   record.js:3:22
   3| declare const exact: Exact;
                           ^^^^^ [1]
   record.js:5:10
   5| exact as {foo: number}; // ERROR, mising bar
               ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- record.js:10:1

Cannot cast `indexed` to object type because indexed `Record` [1] is incompatible with exact object type [2].
[incompatible-indexer]

   record.js:10:1
   10| indexed as {foo: number}; // ERROR, missing indexer
       ^^^^^^^

References:
   record.js:8:24
    8| declare const indexed: Indexed;
                              ^^^^^^^ [1]
   record.js:10:12
   10| indexed as {foo: number}; // ERROR, missing indexer
                  ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- record.js:16:1

Cannot cast `numIndexed` to object type because indexed `Record` [1] is incompatible with exact object type [2].
[incompatible-indexer]

   record.js:16:1
   16| numIndexed as {1: string}; // ERROR, missing indexer
       ^^^^^^^^^^

References:
   record.js:14:27
   14| declare const numIndexed: NumIndexed;
                                 ^^^^^^^^^^ [1]
   record.js:16:15
   16| numIndexed as {1: string}; // ERROR, missing indexer
                     ^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- record.js:22:1

Cannot cast `symIndexed` to object type because indexed `Record` [1] is incompatible with exact object type [2].
[incompatible-indexer]

   record.js:22:1
   22| symIndexed as {foo: boolean}; // ERROR, missing indexer
       ^^^^^^^^^^

References:
   record.js:20:27
   20| declare const symIndexed: SymIndexed;
                                 ^^^^^^^^^^ [1]
   record.js:22:15
   22| symIndexed as {foo: boolean}; // ERROR, missing indexer
                     ^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- record.js:22:1

Cannot cast `symIndexed` to object type because in the indexer property's key: string `foo` [1] is incompatible with
symbol [2]. [incompatible-type]

   record.js:22:1
   22| symIndexed as {foo: boolean}; // ERROR, missing indexer
       ^^^^^^^^^^

References:
   record.js:22:15
   22| symIndexed as {foo: boolean}; // ERROR, missing indexer
                     ^^^^^^^^^^^^^^ [1]
   record.js:19:26
   19| type SymIndexed = Record<symbol, boolean>;
                                ^^^^^^ [2]



Found 25 errors
